--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <div class="red-line"></div>
                 <div class="reviews-slider">
                     <div class="reviews-block">
-                        <img src="/img/R1.png" alt="" class="reviews-block__img">
+                        <img src="img/R1.png" alt="" class="reviews-block__img">
 
                         <div class="reviews-block-text">
                             <h3 class="title_blue">Rebecca Morrison</h3>
@@ -259,7 +259,7 @@
 
 
                     <div class="reviews-block">
-                        <img src="/img/R2.png" alt="" class="reviews-block__img">
+                        <img src="img/R2.png" alt="" class="reviews-block__img">
                         <div class="reviews-block-text">
                             <h3 class="title_blue">Daniel Bllomberg</h3>
                             <h2 class="title_white title_white_reviews">Salesman</h2>
