--- a/index.html
+++ b/index.html
@@ -369,27 +369,27 @@
                 <div class="contact-block-icon">
                     <a href="https://www.facebook.com/" target="blunk">
                         <svg width="20" height="20" viewBox="0 0 32 32" class="contact-block-icon__item">
-                            <use xlink:href="/svg/facebook.svg#icon-facebook"></use>
+                            <use xlink:href="svg/facebook.svg#icon-facebook"></use>
                         </svg>
                     </a>
                     <a href="https://twitter.com/explore" target="blunk">
                         <svg width="20" height="20" viewBox="0 0 32 32" class="contact-block-icon__item">
-                            <use xlink:href="/svg/twitter.svg#icon-twitter"></use>
+                            <use xlink:href="svg/twitter.svg#icon-twitter"></use>
                         </svg>
                     </a>
                     <a href="https://www.linkedin.com/" target="blunk">
                         <svg width="20" height="20" viewBox="0 0 32 32" class="contact-block-icon__item">
-                            <use xlink:href="/svg/linkedin2.svg#icon-linkedin2"></use>
+                            <use xlink:href="svg/linkedin2.svg#icon-linkedin2"></use>
                         </svg>
                     </a>
                     <a href="https://www.youtube.com/" target="blunk">
                         <svg width="20" height="20" viewBox="0 0 32 32" class="contact-block-icon__item">
-                            <use xlink:href="/svg/youtube.svg#icon-youtube"></use>
+                            <use xlink:href="svg/youtube.svg#icon-youtube"></use>
                         </svg>
                     </a>
                     <a href="https://www.pinterest.com/" target="blunk">
                         <svg width="20" height="20" viewBox="0 0 32 32" class="contact-block-icon__item">
-                            <use xlink:href="/svg/pinterest.svg#icon-pinterest"></use>
+                            <use xlink:href="svg/pinterest.svg#icon-pinterest"></use>
                         </svg>
                     </a>
                 </div>
@@ -402,7 +402,7 @@
 
                     <div class="contact-block-item-text">
                         <svg width="20" height="20" viewBox="0 0 32 32" class="icon">
-                            <use xlink:href="/svg/map.svg#icon-location"></use>
+                            <use xlink:href="svg/map.svg#icon-location"></use>
                         </svg>
                         <span class="title_heading title_heading_contact margin_0">23, George
                             Washington Street,
@@ -411,21 +411,21 @@
 
                     <div class="contact-block-item-text">
                         <svg width="20" height="20" viewBox="0 0 32 32" class="icon">
-                            <use xlink:href="/svg/phone.svg#icon-phone"></use>
+                            <use xlink:href="svg/phone.svg#icon-phone"></use>
                         </svg>
                         <span class="title_heading title_heading_contact margin_0">+1 957 652 1268</span>
                     </div>
 
                     <div class="contact-block-item-text">
                         <svg width="20" height="20" viewBox="0 0 32 32" class="icon">
-                            <use xlink:href="/svg/email.svg#icon-envelop"></use>
+                            <use xlink:href="svg/email.svg#icon-envelop"></use>
                         </svg>
                         <span class="title_heading title_heading_contact margin_0">info@shapeup.com</span>
                     </div>
 
                     <div class="contact-block-item-text">
                         <svg width="20" height="20" viewBox="0 0 32 32" class="icon">
-                            <use xlink:href="/svg/earth.svg#icon-sphere"></use>
+                            <use xlink:href="svg/earth.svg#icon-sphere"></use>
                         </svg>
                         <span class="title_heading title_heading_contact margin_0">www.shapeup.com</span>
                     </div>
