--- a/index.html
+++ b/index.html
@@ -11,18 +11,7 @@
 </head>
 
 <body>
-    <div class="input wrapper" id="un">
-        <h2 class="header__title center">
-            Sorry, the site is under construction! To get test access, enter the code:
-        </h2>
-        <div class="input-block">
-            <input type="text" id="password" class="input__area" placeholder="Enter a code">
-            <button class="header-btn__item" id="enter">Enter</button>
-            <h3 class="title_blue error">You entered an incorrect password, please try again</h3>
-        </div>
-
-    </div>
-    <div class="container unvisible">
+    <div class="container ">
         <nav class="nav">
             <img src="img/logo.png" alt="" class="nav__logo">
             <ul class="nav-list">
@@ -85,7 +74,7 @@
         </nav>
     </div>
 
-    <div class="wrapper wrapper_header unvisible" id="home">
+    <div class="wrapper wrapper_header " id="home">
         <header class="header">
             <h1 class="header__title">
                 <span class="header__title_blue">build</span>
@@ -107,8 +96,8 @@
         </header>
     </div>
 
-    <main class="unvisible">
-        <div class="wrapper unvisible">
+    <main>
+        <div class="wrapper ">
             <div class="about" id="about">
                 <div class="about-text">
                     <h3 class="title_blue">
@@ -346,7 +335,7 @@
 
     </main>
 
-    <footer class="footer unvisible" id="contact">
+    <footer class="footer " id="contact">
 
         <div class="contact wrapper">
             <h3 class="title_blue">Call Us Today</h3>
